<resources>
    <string name="app_name">AndroidQuiz2</string>
    <string name="action_settings">Settings</string>


    <string name="txt_email">Email</string>
    <string name="txt_enter_email_to_signup">Enter the email you signed up with</string>
    <string name="txt_password">Password</string>
    <string name="txt_firstname">First Name</string>
    <string name="txt_lastname">Last Name</string>
    <string name="txt_middlename">Middle Name</string>
    <string name="txt_preferredname">Preferred Name</string>
    <string name="txt_mobileno">Mobile Number</string>
    <string name="txt_confirmpassword">Confirm Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_signup">Sign Up</string>
    <string name="error_usertype">Please select user type</string>
    <string name="error_completion">Please complete form</string>

    <string name="txt_user_exists">Email already exist</string>
    <string name="txt_usercreated">User created successfully</string>
    <string name="txt_userlogin">User login successfully</string>

    <string name="txt_editnumber">Number edit successfully</string>
    <string name="userlogin_error">User not found</string>
    <string name="email_error">Email is not valid</string>
    <string name="mobilenumber_error">Mobile number is not valid</string>
    <string name="password_error">Password should contain one special character and minimum 8 characters required</string>

</resources>
